--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Test Website
+    <marquee behavior="" direction="">Test Website</marquee>
 </body>
 </html>
