--- a/table.html
+++ b/table.html
@@ -7,11 +7,15 @@
 </head>
 <body>
     <table>
+        <thead>
         <caption>Student Data</caption>
+        <th colspan="2">INFORMATION</th>
         <tr>
             <th>Name</th>
             <th>Roll No</th>
         </tr>
+    </thead>
+    <tbody>
         <tr>
             <td>Manish</td>
             <td>1664</td>
@@ -24,6 +28,7 @@
             <td>Arpan</td>
             <td>1666</td>
         </tr>
+    </tbody>
     </table>
 </body>
 </html>
