--- a/form.html
+++ b/form.html
@@ -55,7 +55,11 @@
             <option value="Mumbai">Mumbai</option>
             <option value="Banglore">Banglore</option>
             <option value="Kerla">Kerla</option>
+            <option value="Others">Others</option>
         </select>
+        <br />
+        <br />
+        <input type="text" placeholder="city ">
         <br />
         <br />
         <textarea name="feedback" id="id1" placeholder="Please give your feedback">Feedback</textarea>
