--- a/Experience.html
+++ b/Experience.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2> Registeration Form  </h2>
+    <form action="connect.php" method="post">
+        <input type="text" placeholder="Name" name="Name">
+        <br />
+        <br />
+        <input type="DOB" placeholder="DOB" name="DOB">
+        <br />
+        <br />
+        <select name="gender" id="gender">
+            <option value="Male">Delhi</option>
+            <option value="Mumbai">Mumbai</option>
+            <option value="Banglore">Banglore</option>
+        </select>
+        <br />
+        <br />
 </body>
 </html>
