--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
    <p>This is a page</p> 
-   <a href="assignment.php">Form</a>
+   <a href="assignment.php">  Asssignment</a>
+   <br/>
+   <a href="form.php">Form</a>
+   <br/>
+   <a href="copy.php">copy</a>
 </body>
 </html>
