--- a/Success.html
+++ b/Success.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Successful submited
+    Date of Birth :  <input type="date" placeholder="DD-MM-YYYY" name="DOB">
     
 </body>
 </html>
